--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 .body {
 	font-family: "Open Sans", sans-serif;
+	min-width: 1440px;
 }
 
 .clearfix::after {
@@ -71,72 +72,71 @@
 SITE_HEADER 
 **********/
 
-/* .nav */
-/* common_rules  */
+#site_header {
+	margin-bottom: 6rem;
+}
 
-.list > li {
-	display: inline-block;
+/* .nav */
+.nav {
+	background-color: #fff;
+	height: auto;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	margin-bottom: rem 0;
+	padding: 1rem 0;
+	z-index: 10;
+	border-bottom: 1px solid #000;
 }
 
 .nav_left,
 .nav_right {
 	float: left;
-	width: 49%;
-	margin: 0 0.1rem;
-}
-/* /common_rules  */
-
-.nav {
-	padding: 0.5rem 0;
-	position: fixed;
-	top: 0%;
-	left: 0%;
-	width: 100%;
-	background-color: white;
-	z-index: 10;
-}
-/* .nav img {
 	width: 50%;
-	height: 50%;
-} */
+	padding: 0 0.1rem;
+}
 
-.list {
+.list_nav {
 	list-style: none;
+	margin: 0 auto;
+	padding: 0;
+	width: 100%;
 }
 
-.list > li {
+.list_nav li {
 	display: inline-block;
-}
-
-.list > li > a {
-	color: black;
-	font-size: 0.7rem;
-	font-weight: 400;
-	padding-right: 2rem;
-	text-decoration: none;
-}
-
-a:hover {
-	cursor: pointer;
-}
-
-.nav_left,
-.nav_right {
-	height: 35px;
-	line-height: 35px;
-	vertical-align: middle;
 	text-align: center;
+	padding: 1rem;
+	font-size: 20px;
 }
 
-#logo {
-	text-align: left;
+.list_nav li a {
+	display: block;
+	text-decoration: none;
+	color: #000;
+	padding: 15px 10px;
+	font-size: 1.2em;
+	box-sizing: border-box;
 }
 
-#btn_sign_in button {
+.list_nav li > a {
+	width: auto;
+}
+
+.list_nav li > a > img {
+	width: auto;
+}
+
+.nav_right {
+	text-align: right;
+}
+
+#btn_sign_in {
 	background-color: #0061ff;
 	color: white;
-	padding: 0.2rem 0.5rem;
-	font-size: 8px;
+	padding: 0.5rem 1rem;
+	font-size: 15px;
 	font-weight: 100;
 	border: none;
 }
@@ -145,67 +145,11 @@ a:hover {
 	text-align: right;
 }
 
-#btn_sign_in button:hover {
-	cursor: pointer;
+.list_nav > li:hover a {
+	background-color: #f7f5f2;
+	color: #000;
 }
 /* /.nav */
-
-/* .jumbo */
-/* common_rules  */
-.text,
-img {
-	float: left;
-	width: 50%;
-}
-/* /common_rules  */
-
-.jumbo {
-	background-color: #b4d0e7;
-	width: 100%;
-	margin: 3rem 0;
-	height: 500px;
-	padding: 1% 0;
-}
-
-.jumbo h1 {
-	font-size: 80px;
-}
-
-.jumbo p {
-	padding: 1rem 0;
-	font-size: 15px;
-}
-
-.btn_free {
-	padding: 1rem 0;
-	padding-bottom: 0.5rem;
-}
-
-.btn_free > button {
-	padding: 0.5rem;
-	background-color: #0061ff;
-	border: none;
-	color: white;
-}
-
-.jumbo img {
-	position: relative;
-	right: 15%;
-	bottom: 0;
-}
-
-#subtitle {
-	padding: 0.5rem 0;
-	padding-bottom: 0.5rem;
-	color: black;
-}
-
-.text > i {
-	padding: 1.5rem 0;
-	padding-top: 0.5rem;
-	font-size: 30px;
-}
-/* /.jumbo */
 
 /**********
 /SITE_HEADER 
@@ -215,6 +159,564 @@ img {
 SITE_MAIN 
 **********/
 
+/* .jumbo */
+.text_jumbo,
+.image_jumbo {
+	float: left;
+	width: 50%;
+	margin: 0;
+	padding: 0;
+}
+
+.jumbo {
+	background-color: #b4d0e7;
+	width: 100%;
+	margin-top: 3rem;
+	padding-top: 5%;
+}
+
+.jumbo h1 {
+	font-size: 80px;
+}
+
+.jumbo p {
+	padding: 1rem 0;
+	font-size: 20px;
+}
+
+.btn_free > a {
+	padding: 0.5rem 1rem;
+	background-color: #0061ff;
+	border: none;
+	color: white;
+	text-decoration: none;
+	text-align: center;
+}
+
+#subtitle {
+	padding-top: 0.5rem;
+	padding-bottom: 3rem;
+	color: black;
+}
+
+.text_jumbo > i {
+	padding: 0;
+	font-size: 35px;
+	font-weight: 900;
+}
+
+.image_jumbo > img {
+	width: 130%;
+	position: relative;
+	top: 18%;
+	right: 30%;
+}
+/* /.jumbo */
+
+/* .section_plan */
+.container_minor h2 {
+	padding-top: 4rem;
+	padding-bottom: 2rem;
+	font-size: 45px;
+	font-weight: 900;
+}
+
+.container_minor form {
+	font-size: 20px;
+}
+
+#input_second {
+	margin-left: 1rem;
+}
+
+.radio {
+	margin-right: 0.1rem;
+}
+
+/* .container_left, .container_center, .container_right */
+.col_left,
+.col_center,
+.col_right {
+	float: left;
+	width: 31.33%;
+	min-height: 1000px;
+	margin: 2rem 0.5rem;
+	padding: 0rem;
+	border: 1px solid black;
+}
+
+#title_col {
+	text-align: center;
+	font-weight: 500;
+	padding: 1rem 0;
+}
+
+.text_col {
+	padding: 1rem;
+	text-align: left;
+}
+
+#subtitle_col {
+	font-size: 25px;
+	font-weight: 900;
+	padding: 1rem 0;
+}
+
+#price {
+	font-size: 17px;
+	font-weight: 900;
+}
+
+#month {
+	color: #637381;
+	font-size: 15px;
+	font-weight: 900;
+	margin-bottom: 2.5rem;
+}
+
+#folder,
+#smile {
+	padding: 1rem 0;
+	font-size: 15px;
+}
+
+.premium {
+	font-size: 15px;
+}
+
+#pencil,
+#text_pencil,
+#smile,
+#text_smile {
+	display: inline-block;
+}
+
+#free {
+	margin-top: 2rem;
+	margin-bottom: 1rem;
+	font-size: 15px;
+	width: 300px;
+}
+
+#free > a {
+	padding: 0.5rem 3.5rem;
+	background-color: #0061ff;
+	color: white;
+	text-decoration: none;
+	text-align: center;
+	width: auto;
+	margin-bottom: 2rem;
+}
+
+.buy_now {
+	font-size: 15px;
+}
+
+#now {
+	color: #0061ff;
+	text-decoration: underline;
+}
+
+#row_short {
+	width: 15%;
+	text-align: left;
+	border: 1px solid gray;
+	margin-top: 1.5rem;
+	margin-bottom: 2rem;
+}
+
+#points {
+	font-size: 20px;
+}
+
+.check {
+	padding: 0.5rem 0;
+	font-size: 15px;
+	font-weight: 500;
+}
+
+.text_col i {
+	padding: 0.5rem 0;
+}
+
+.check i {
+	color: #0061ff;
+}
+/* /.container_left, /.container_center, /.container_right */
+/* /.section_plan */
+
+/* .section_partner */
+/* .table_enterprise */
+.section_partner {
+	margin: 2rem 0;
+}
+
+.table_enterprise h3,
+p {
+	padding: 1rem;
+}
+
+#title_table_enterprise {
+	text-align: center;
+	padding: 1rem 0;
+}
+
+.table_enterprise {
+	border: 1px solid black;
+	width: 100%;
+	height: auto;
+}
+
+#sales_office {
+	font-size: 15px;
+	width: 300px;
+	margin-top: 2rem;
+	text-align: left;
+}
+
+#sales_office > a {
+	width: auto;
+	padding: 0.5rem 3rem;
+	background-color: #0061ff;
+	color: white;
+	text-decoration: none;
+	text-align: center;
+}
+
+.text_enterprise,
+#sales_office {
+	float: left;
+}
+
+.text_enterprise {
+	width: 70%;
+}
+
+#sales_office {
+	width: 30%;
+	position: relative;
+	top: 0;
+	left: 5%;
+}
+
+.text_enterprise > h3 {
+	padding: 1.5rem 0 1rem 1rem;
+	margin-top: 1rem;
+	font-size: 30px;
+	font-weight: 900;
+}
+
+.text_enterprise > p {
+	font-size: 16px;
+	padding: 1rem;
+}
+/* /.table_enterprise */
+
+/* .enterprise_down */
+.enterprise_down {
+	margin: 8rem 0;
+}
+
+.image_enterpise_down,
+.text_enterpise_down {
+	float: left;
+	width: 50%;
+}
+
+.image_enterpise_down img {
+	width: 100%;
+}
+
+.text_enterpise_down {
+	text-align: left;
+	padding: 2rem;
+	margin-bottom: 2rem;
+}
+
+.text_enterpise_down > h3 {
+	padding-bottom: 2rem;
+	font-size: 25px;
+	font-weight: 900;
+}
+
+.enterprise_down a {
+	padding: 0.5rem 3rem;
+}
+
+#paragraph {
+	padding: 0;
+	font-size: 20px;
+	font-weight: 500;
+}
+
+#partner {
+	width: 20%;
+	padding: 0.5rem 3rem;
+	margin-left: 2rem;
+	background-color: white;
+	color: black;
+	text-decoration: none;
+	text-align: center;
+	border: 1px solid black;
+}
+/* /.enterprise_down */
+/* /.section_partner */
+
+/* .section_business */
+.section_business h2 {
+	font-size: 40px;
+	font-weight: 900;
+}
+
+.col {
+	float: left;
+	width: 33.33%;
+	padding: 0 1rem;
+}
+
+.image_item img {
+	width: 100%;
+}
+
+.row_section_business {
+	margin: 0 -1rem;
+}
+
+.text_item > h3 {
+	font-size: 22px;
+	font-weight: 900;
+}
+
+.text_item > p {
+	font-size: 17px;
+	font-weight: 500;
+}
+/* /.section_business */ /* ARRIVATO QUI */
+
+/* .section_team */
+.row {
+	margin: 0 -1rem;
+}
+
+.col_1,
+.col_2,
+.col_3 {
+	float: left;
+}
+
+.col_1,
+.col_3 {
+	width: 21%;
+}
+
+.col_2 {
+	width: 58%;
+	height: 484px;
+	height: auto;
+	padding: 0 5rem;
+	background-color: #f5f5f5;
+}
+
+.item_team {
+	float: left;
+	width: 50%;
+	height: auto;
+}
+
+.box_1 {
+	background-color: #a2d39b;
+	position: relative;
+	width: 100%;
+	height: 242px;
+}
+
+.box_1 img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	filter: invert(1);
+}
+
+.box_2 {
+	background-color: #61082b;
+	position: relative;
+	width: 100%;
+	height: 242px;
+}
+
+.box_2 img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	filter: invert(1);
+}
+
+.box_3 {
+	background-color: #0093ce;
+	position: relative;
+	width: 100%;
+	height: 242px;
+}
+
+.box_3 img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	filter: invert(1);
+}
+
+.box_4 {
+	background-color: #ff1c1c;
+	position: relative;
+	width: 100%;
+	height: 242px;
+}
+
+.box_4 img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	filter: invert(1);
+}
+/* /.col_1 */
+
+/* .col_2 */
+.col_2 img {
+	width: 20%;
+}
+
+#hr {
+	width: 4%;
+	border: 1px solid gray;
+	margin-top: 4rem;
+}
+
+.text_col_2 > p {
+	font-size: 20px;
+}
+
+/* /.col_2 */
+
+/* .col_3 */
+.box_5 {
+	background-color: #d5001f;
+	position: relative;
+	width: 100%;
+	height: 242px;
+}
+
+.box_5 img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	filter: invert(1);
+}
+
+.box_6 {
+	background-color: #b4d0e7;
+	position: relative;
+	width: 100%;
+	height: 242px;
+}
+
+.box_6 img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	filter: invert(1);
+}
+
+.box_7 {
+	background-color: #0d2481;
+	position: relative;
+	width: 100%;
+	height: 242px;
+}
+
+.box_7 img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	filter: invert(1);
+}
+
+.box_8 {
+	background-color: #ffd830;
+	position: relative;
+	width: 100%;
+	height: 242px;
+}
+
+.box_8 img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50%;
+	filter: invert(1);
+}
+/* /.col_3 */
+
+/* .team_under */
+.team_under {
+	background-color: #b4d0e7;
+}
+
+.team_under_minor {
+	padding: 5rem 0;
+	position: relative;
+}
+
+.team_under_minor > h2,
+a {
+	/* float: left;
+	width: 50%; */
+	display: inline-block;
+	padding: 0;
+}
+
+.team_under_minor > a {
+	text-decoration: none;
+	padding: 0.5rem 2rem;
+	background-color: #fff;
+	color: #000;
+	position: absolute;
+	top: 35%;
+	left: 70%;
+}
+/* /.team_under */
+/* /.section_team */
+
+/* .section_faq */
+.container_minor h4,
+p {
+	padding: 2rem 0;
+}
+
+#hr_long {
+	width: 100%;
+	border: 1px solid gray;
+}
+
+.faq {
+	margin: 2rem 0;
+}
+/* /.section_faq */
+
 /**********
 /SITE_MAIN 
 **********/
@@ -222,6 +724,84 @@ SITE_MAIN
 /**********
 SITE_FOOTER 
 **********/
+
+#site_footer {
+	background-color: black;
+}
+
+#container_major_footer {
+	padding-top: 2rem;
+	color: white;
+}
+
+#container_major_footer h3 {
+	padding-bottom: 2rem;
+	text-align: left;
+}
+
+.dropbox,
+.prodotti,
+.azienda,
+.supporto,
+.community {
+	float: left;
+	width: 20%;
+	height: auto;
+	margin: 0;
+}
+
+.list_footer {
+	margin: 0 auto;
+	padding: 0;
+	width: 100%;
+	list-style: none;
+}
+
+.list_footer li {
+	list-style: none;
+	display: block;
+	text-align: left;
+	padding: 0;
+	font-size: 10px;
+	width: auto;
+}
+
+.list_footer > li > a {
+	color: white;
+	font-size: 0.9rem;
+	display: block;
+	text-decoration: none;
+	padding: 5px 2px;
+	display: block;
+}
+
+li > a:hover {
+	text-decoration: underline;
+	color: white;
+}
+
+#hr_short {
+	width: 10%;
+	border: 1px solid gray;
+	margin-top: 25%;
+}
+
+.languages > form:hover {
+	cursor: pointer;
+}
+
+.languages > form {
+	display: inline-block;
+	padding-left: 0.5rem;
+}
+
+.languages {
+	padding: 2rem 0;
+}
+
+.languages > i {
+	cursor: pointer;
+}
 
 /**********
 /SITE_FOOTER 
