--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-/* common_general_rules  */
+/* common_general_rules  */ /* div[class^="col_"]{
+									float: left;
+								} */
+
 * {
 	margin: 0;
 	padding: 0;
@@ -42,7 +45,7 @@
 	background-color: aqua;
 }
 
-.debug .section_plan {
+.debug .section_col {
 	height: 1421px;
 	background-color: #c4c4c4;
 }
@@ -73,20 +76,18 @@ SITE_HEADER
 **********/
 
 #site_header {
-	margin-bottom: 6rem;
+	line-height: 60px;
 }
 
 /* .nav */
 .nav {
 	background-color: #fff;
-	height: auto;
 	width: 100%;
 	position: fixed;
 	top: 0;
 	left: 0;
-	margin-bottom: rem 0;
-	padding: 1rem 0;
-	z-index: 10;
+	padding: 1rem;
+	z-index: 100;
 	border-bottom: 1px solid #000;
 }
 
@@ -94,14 +95,13 @@ SITE_HEADER
 .nav_right {
 	float: left;
 	width: 50%;
-	padding: 0 0.1rem;
+	padding: 0;
 }
 
 .list_nav {
 	list-style: none;
 	margin: 0 auto;
 	padding: 0;
-	width: 100%;
 }
 
 .list_nav li {
@@ -116,16 +116,7 @@ SITE_HEADER
 	text-decoration: none;
 	color: #000;
 	padding: 15px 10px;
-	font-size: 1.2em;
-	box-sizing: border-box;
-}
-
-.list_nav li > a {
-	width: auto;
-}
-
-.list_nav li > a > img {
-	width: auto;
+	font-size: 1.6rem;
 }
 
 .nav_right {
@@ -135,10 +126,11 @@ SITE_HEADER
 #btn_sign_in {
 	background-color: #0061ff;
 	color: white;
-	padding: 0.5rem 1rem;
-	font-size: 15px;
+	font-size: 1.5rem;
 	font-weight: 100;
 	border: none;
+	padding: 0.6rem 2rem;
+	cursor: pointer;
 }
 
 #btn_sign_in {
@@ -177,11 +169,14 @@ SITE_MAIN
 
 .jumbo h1 {
 	font-size: 80px;
+	margin-top: 4rem;
 }
 
 .jumbo p {
-	padding: 1rem 0;
+	padding-top: 1.5rem;
+	padding-bottom: 2rem;
 	font-size: 20px;
+	font-weight: 500;
 }
 
 .btn_free > a {
@@ -194,7 +189,7 @@ SITE_MAIN
 }
 
 #subtitle {
-	padding-top: 0.5rem;
+	padding-top: 1.5em;
 	padding-bottom: 3rem;
 	color: black;
 }
@@ -210,13 +205,18 @@ SITE_MAIN
 	position: relative;
 	top: 18%;
 	right: 30%;
+	margin-bottom: -5rem;
 }
 /* /.jumbo */
 
-/* .section_plan */
+/* .section_col */
+.section_col_header {
+	margin-bottom: 3rem;
+}
+
 .container_minor h2 {
-	padding-top: 4rem;
-	padding-bottom: 2rem;
+	margin-top: 10rem;
+	margin-bottom: 2rem;
 	font-size: 45px;
 	font-weight: 900;
 }
@@ -225,24 +225,31 @@ SITE_MAIN
 	font-size: 20px;
 }
 
-#input_second {
+#radio_second {
 	margin-left: 1rem;
 }
 
 .radio {
-	margin-right: 0.1rem;
+	margin-right: 0.3rem;
 }
 
-/* .container_left, .container_center, .container_right */
+/* .col_left, .col_center, .col_right */
 .col_left,
 .col_center,
 .col_right {
 	float: left;
-	width: 31.33%;
+	width: 32.33%;
+	padding: 0 1rem;
+}
+
+.card {
 	min-height: 1000px;
-	margin: 2rem 0.5rem;
-	padding: 0rem;
-	border: 1px solid black;
+	border: 1px solid #000;
+}
+
+.col_header {
+	border-bottom: 1px solid #000;
+	width: 100%;
 }
 
 #title_col {
@@ -256,26 +263,26 @@ SITE_MAIN
 	text-align: left;
 }
 
-#subtitle_col {
+.subtitle_col {
 	font-size: 25px;
 	font-weight: 900;
 	padding: 1rem 0;
 }
 
-#price {
+.price {
 	font-size: 17px;
 	font-weight: 900;
 }
 
-#month {
+.month {
 	color: #637381;
 	font-size: 15px;
 	font-weight: 900;
 	margin-bottom: 2.5rem;
 }
 
-#folder,
-#smile {
+.folder,
+.smile {
 	padding: 1rem 0;
 	font-size: 15px;
 }
@@ -284,21 +291,21 @@ SITE_MAIN
 	font-size: 15px;
 }
 
-#pencil,
-#text_pencil,
-#smile,
-#text_smile {
+.pencil,
+.text_pencil,
+.smile,
+.text_smile {
 	display: inline-block;
 }
 
-#free {
-	margin-top: 2rem;
+.free {
+	margin-top: 1rem;
 	margin-bottom: 1rem;
 	font-size: 15px;
 	width: 300px;
 }
 
-#free > a {
+.free > a {
 	padding: 0.5rem 3.5rem;
 	background-color: #0061ff;
 	color: white;
@@ -312,12 +319,12 @@ SITE_MAIN
 	font-size: 15px;
 }
 
-#now {
+.now {
 	color: #0061ff;
 	text-decoration: underline;
 }
 
-#row_short {
+.row_short {
 	width: 15%;
 	text-align: left;
 	border: 1px solid gray;
@@ -325,7 +332,7 @@ SITE_MAIN
 	margin-bottom: 2rem;
 }
 
-#points {
+.points {
 	font-size: 20px;
 }
 
@@ -343,7 +350,7 @@ SITE_MAIN
 	color: #0061ff;
 }
 /* /.container_left, /.container_center, /.container_right */
-/* /.section_plan */
+/* /.section_col */
 
 /* .section_partner */
 /* .table_enterprise */
@@ -439,7 +446,7 @@ p {
 	font-weight: 900;
 }
 
-.enterprise_down a {
+.enterprise_down > a {
 	padding: 0.5rem 3rem;
 }
 
@@ -468,6 +475,10 @@ p {
 	font-weight: 900;
 }
 
+.row_section_business {
+	margin: 0 -1rem;
+}
+
 .col {
 	float: left;
 	width: 33.33%;
@@ -476,10 +487,6 @@ p {
 
 .image_item img {
 	width: 100%;
-}
-
-.row_section_business {
-	margin: 0 -1rem;
 }
 
 .text_item > h3 {
@@ -491,11 +498,17 @@ p {
 	font-size: 17px;
 	font-weight: 500;
 }
-/* /.section_business */ /* ARRIVATO QUI */
+/* /.section_business */
 
 /* .section_team */
-.row {
+#link_section_team {
+	color: #0061ff;
+	margin-bottom: 2rem;
+}
+
+.row_section_team {
 	margin: 0 -1rem;
+	margin-top: 4rem;
 }
 
 .col_1,
@@ -511,10 +524,13 @@ p {
 
 .col_2 {
 	width: 58%;
-	height: 484px;
 	height: auto;
 	padding: 0 5rem;
 	background-color: #f5f5f5;
+}
+
+#image_col_2 {
+	padding-top: 3rem;
 }
 
 .item_team {
@@ -673,38 +689,69 @@ p {
 
 /* .team_under */
 .team_under {
+	margin-bottom: 2rem;
+	height: 400px;
 	background-color: #b4d0e7;
+	padding: 8rem 0;
 }
 
-.team_under_minor {
-	padding: 5rem 0;
-	position: relative;
+.text_team_under,
+.link_team_under {
+	float: left;
+	width: 50%;
+	margin: 0;
 }
 
-.team_under_minor > h2,
-a {
-	/* float: left;
-	width: 50%; */
-	display: inline-block;
-	padding: 0;
+.link_team_under {
+	margin-top: 4rem;
+	margin-right: rem;
 }
 
-.team_under_minor > a {
+.text_team_under {
+	color: #61082b;
+}
+
+.link_team_under > a {
+	margin-left: 10rem;
+	padding: 0.5rem 3rem;
+	background: white;
 	text-decoration: none;
-	padding: 0.5rem 2rem;
-	background-color: #fff;
 	color: #000;
-	position: absolute;
-	top: 35%;
-	left: 70%;
+}
+
+#title_team_under {
+	margin: 2rem 0;
 }
 /* /.team_under */
 /* /.section_team */
 
 /* .section_faq */
+.faq {
+	margin: 2rem 0;
+}
+
+.faq h3 {
+	font-size: 35px;
+}
+
+.faq h4 {
+	font-size: 20px;
+	display: inline-block;
+}
+
+.faq p {
+	font-size: 22px;
+}
+
 .container_minor h4,
 p {
 	padding: 2rem 0;
+}
+
+#hr_long_first {
+	width: 100%;
+	border: 1px solid gray;
+	margin-top: 3rem;
 }
 
 #hr_long {
@@ -712,8 +759,19 @@ p {
 	border: 1px solid gray;
 }
 
-.faq {
-	margin: 2rem 0;
+.arrow {
+	position: relative;
+	top: 0;
+	left: 28%;
+}
+
+.arrow,
+.title_faq:hover {
+	cursor: pointer;
+}
+
+.text_faq {
+	font-size: 15px;
 }
 /* /.section_faq */
 
@@ -769,7 +827,6 @@ SITE_FOOTER
 .list_footer > li > a {
 	color: white;
 	font-size: 0.9rem;
-	display: block;
 	text-decoration: none;
 	padding: 5px 2px;
 	display: block;
