--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-/* common_general_rules  */ /* div[class^="col_"]{
-									float: left;
-								} */
-
+/* common_general_rules  */ 
 * {
 	margin: 0;
 	padding: 0;
